[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = "Project to learn about poetry (from `https://python-poetry.org/docs/basic-usage/`)"
authors = ["Larry Jones <mrwizard82d1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
